--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -1,1 +1,87 @@
-/home/lee/.config/MangoHud/MangoHud.conf
+# MangoHud Configuration
+
+# =============================================================================
+# DISPLAY SETTINGS
+# =============================================================================
+legacy_layout=false
+position=top-left
+offset_x=10
+offset_y=10
+round_corners=10
+background_alpha=0.6
+background_color=000000
+
+# =============================================================================
+# PERFORMANCE METRICS
+# =============================================================================
+# GPU Stats
+gpu_stats
+gpu_load_change
+gpu_core_clock
+gpu_mem_clock
+gpu_temp
+gpu_power
+vram
+
+# CPU Stats
+cpu_stats
+cpu_load_change
+cpu_mhz
+cpu_temp
+cpu_power
+
+# System Stats
+ram
+fps
+fps_metrics=avg,0.01
+frame_timing
+
+# =============================================================================
+# KEYBINDINGS
+# =============================================================================
+toggle_hud=Shift_R+F12
+toggle_hud_position=Shift_R+F11
+toggle_logging=Shift_L+F2
+toggle_fps_limit=Shift_L+F1
+
+# =============================================================================
+# FPS LIMITER
+# =============================================================================
+fps_limit_method=late
+fps_value=30,60
+
+# =============================================================================
+# APPLICATION BLACKLIST
+# =============================================================================
+blacklist=pamac-manager,lact,ghb,bitwig-studio,ptyxis,yumex
+
+# =============================================================================
+# COLOR SCHEME
+# =============================================================================
+# Text Colors
+text_color=ffffff
+gpu_text=GPU
+gpu_color=2e9762
+cpu_text=CPU
+cpu_color=2e97cb
+
+# Performance Colors
+fps_color=cc0000,ffaa7f,92e79a
+gpu_load_value=60,90
+gpu_load_color=92e79a,ffaa7f,cc0000
+cpu_load_value=60,90
+cpu_load_color=92e79a,ffaa7f,cc0000
+
+# System Colors
+frametime_color=00ff00
+vram_color=ad64c1
+ram_color=c26693
+wine_color=eb5b5b
+engine_color=eb5b5b
+network_color=e07b85
+battery_color=92e79a
+
+# =============================================================================
+# MISC SETTINGS
+# =============================================================================
+no_display # Off by default
