--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -33,22 +33,13 @@ cpu_power
 # System Stats
 ram
 fps
-fps_metrics=avg,0.01
+fps_metrics=avg,0.01 # 1% low fps
 frame_timing
 
 # =============================================================================
 # KEYBINDINGS
 # =============================================================================
 toggle_hud=Shift_R+F12
-toggle_hud_position=Shift_R+F11
-toggle_logging=Shift_L+F2
-toggle_fps_limit=Shift_L+F1
-
-# =============================================================================
-# FPS LIMITER
-# =============================================================================
-fps_limit_method=late
-fps_value=30,60
 
 # =============================================================================
 # APPLICATION BLACKLIST
