--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -32,6 +32,7 @@ cpu_power
 
 # System Stats
 ram
+swap
 fps
 fps_metrics=avg,0.01 # 1% low fps
 frame_timing
@@ -75,4 +76,4 @@ battery_color=92e79a
 # =============================================================================
 # MISC SETTINGS
 # =============================================================================
-no_display # Off by default
+no_display # Overlay off by default
